OP-2138: Fix My Apps details tooltip z-index bug.

--- a/web-app/themes/common/stylesheets/_dashboardSwitcher.scss
+++ b/web-app/themes/common/stylesheets/_dashboardSwitcher.scss
@@ -516,7 +516,7 @@
 }
 
 .itemTip {
-	z-index: 79001 !important;
+	z-index: 69011 !important;
 	border-radius: 10px;
 	
 	 .x-tool .x-tool-close {
@@ -550,10 +550,6 @@
     max-height: 500px;
     padding: 0;
 	background-color: $my-apps-tooltip-color;
-	
-	.tooltipception {
-		z-index: 79011 !important;
-	}
 	
     .dashboard-tooltip-content {
     	.noIconGivenStack { 
